--- a/index.html
+++ b/index.html
@@ -10,42 +10,71 @@
   <body>
     <header class="page-header">
      <div class="container">
-      Мария Зайцева, mary555zet@mail.ru
+      <a class="header-email"
+      href="mailto:mary555zet@mail.ru">mary555zet@mail.ru</a>
+      <a class="header-phone" href="tel:+79530000000">+79530000000</a>
      </div>
     </header>
 
     <section class="hero-image">
-      <h1 class="heading">Зайцева Мария</h1>
 <div class="container">
+      <h1 class="heading">Зайцева Мария</h1>
       <p>Junior QA</p>
 </div>
     </section>
 
-    <section class="intro">
+<section class="intro">
 <div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2>
+<h2 class="subheading">Давайте познакомимся</h2>
+<figure class="user-image">
+<img src="files/user.JPG" width="928" height="536" alt="Фотография">
+</figure>
+<div>
       <h3>Обо мне</h3>
       <p>Меня зовут Мария. Я прохожу обучение на курсе "Тестирование ПО".</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Пока я делаю только первые шаги в освоении новой профессии и похвастаться особо нечем. Раздел будет пополняться (надеюсь ;))</p>
-   </div> 
+ </div> 
+ <div> 
+<h3>Чем могу быть полезен</h3>
+      <p>Пока я делаю только первые шаги в освоении новой профессии и похвастаться особо нечем. Раздел будет пополняться ;)</p>
+</div>
+<div class="skills">
+ <h3>Мои навыки</h3>
+ <dl class="skills-list">
+   <dt class="skill-html">HTML</dt>
+   <dd class="level"><div style="width: 60%;">60%</div></dd>
+   <dt class="skill-css">CSS</dt>
+   <dd class="level"><div style="width: 40%;">40%</div></dd>
+  </dl>
+</div>
+<div>
+<h3>Youtube</h3>
+<a href="https://www.youtube.com/watch?v=bS4Q-WWyl3Q">Ссылка на видео c Youtube</a>
+</div> 
+
 </section>
 
-    <section class="portfolio">
+<section class="portfolio">
 <div class="container">
       <h2 class="subheading">Мои работы</h2>
 
       <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
+<a class="button" href="source/project/index.html">Открыть страницу</a>
+      <p>Мой первый сайт</p>
 
       <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+<a class="button" href="source/blog/index.html">Открыть страницу</a>
+   
+<p>Статический блог про обучение HTML и CSS</p>
+
+    
 </div>    
 </section>
 
     <footer class="page-footer">
 <div class="container">
-      mary555zet@mail.ru
+      <a class="footer-email"
+      href="mailto:mary555zet@mail.ru">mary555zet@mail.ru</a>
+      <a class="footer-phone" href="tel:+79530000000">+79530000000</a>
     </div>
 </footer>
   </body>
